Fix overlapping issue on carousel and update text to black

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,10 +25,6 @@ body {
     background-color: #e8c7c8 !important
 }
 
-.active {
-    text-shadow: 2px 2px 8px black
-}
-
 .intro {
     height:400px;
     width: 100%;
@@ -142,7 +138,7 @@ body {
     justify-content: center;
     align-items: center; 
     max-height: 700px;
-    border: none;
+    border: none
 }
 
 .card-img-top {
